Opened 12 years ago
Closed 11 years ago
#9901 closed bug (fixed)
[screen_savers/glife] GLifeGrid.cpp: Mismatching allocation and deallocation
Reported by: | mt | Owned by: | korli |
---|---|---|---|
Priority: | normal | Milestone: | R1 |
Component: | Add-Ons/Screen Savers | Version: | R1/Development |
Keywords: | glife | Cc: | |
Blocked By: | Blocking: | ||
Platform: | All |
Description
In GLifeGrid::GLifeGrid(), GLifeGrid::~GLifeGrid() and GLifeGrid::Generation(), Mismatching allocation and deallocation for variable "m_pbGrid". Portions pointed by cppcheck.
[src/add-ons/screen_savers/glife/GLifeGrid.cpp:56]: (error) Mismatching allocation and deallocation: GLifeGrid::m_pbGrid
Attachments (1)
Change History (3)
by , 12 years ago
Attachment: | 0017-Fix-mismatching-allocation-and-deallocation.patch added |
---|
comment:1 by , 12 years ago
patch: | 0 → 1 |
---|
Note:
See TracTickets
for help on using tickets.
Patch