Fix mismatching allocation and deallocation

Fixes #9901.

Signed-off-by: Matt Madia <mattmadia@gmail.com>